# wohnortatlas

./: .gitignore  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES.md  pyproject.toml
scripts/: 00_download.py  01_clip_gtfs.py  02_grid.py  03_pois.py  03b_freizeit_spots.py  03c_schools.py  03d_geocode.py  03e_beach.py  04b_centers.py  04c_reach.py  04d_swim.py  04e_freizeit.py  04f_aggregate.py  04g_egress.py  04h_jobs.py  05_entertainment.py  06_rent.py  07_demographics.py  07a_population.py  08_noise.py  09_greenness.py  10_denkmal.py  11_broadband.py  12_schools_family.py  13_nature.py  14_oepnv.py  15_climate.py  16_flood.py  17_streets.py  18_vacancy.py  20_assemble.py  22_build_web.py  90_validate.py  make_favicon.py  make_og_image.py  publish.sh  stamp_assets.py
web/: access_modes.test.js  anbindung-budget.test.js  anbindung.test.js  decode.js  impressum.html  index.html  method.html  presets.test.js  session.test.js  share.test.js  site.webmanifest
wohnen/: cityness.py  config.py  dl.py  freizeit.py  genesis.py  geocode.py  h3util.py  inspire.py  io.py  labels.py  mbo.py  norm.py  r5_routing.py  reach.py  schools.py  zensus.py
